tests/sema/bad/22_logic_mismatch.sg
fn main() {
  let x:bool = 1 && true;
}
